--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "redux": "^3.0.4",
     "redux-file-upload": "0.0.18",
     "redux-form": "^4.1.3",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "superagent": "^3.4.0",
+    "superagent-bluebird-promise": "^4.1.0"
   }
 }
